fix isVisible on layers

--- a/src/components/base/animation/arrow/Arrow.module.css
+++ b/src/components/base/animation/arrow/Arrow.module.css
@@ -1,5 +1,6 @@
 .arrow {
   position: relative;
+  display: inline-block;
   width: 24px;
   height: 24px;
 }
