--- a/src/components/modal/templates/order/layers/edition/Edition.module.css
+++ b/src/components/modal/templates/order/layers/edition/Edition.module.css
@@ -1,5 +1,5 @@
 .edition {
-  background-color: rosybrown;
+  background-color: white;
   padding: var(--pt2);
 }
 
